# competitive-programming-template

./: CMakeLists.txt  expand.sh  main.cpp  mod_int.hpp  test.cpp  union_find.hpp
segment_tree/: rmq.hpp  rsq.hpp
